:bug: Fix dropdown menu alignment

--- a/src/css/_Dropdown.scss
+++ b/src/css/_Dropdown.scss
@@ -32,7 +32,7 @@
   display: none;
   position: absolute;
   right: 4rem;
-  top: 5rem;
+  top: 7rem;
   z-index: 10;
   border-radius: 0.2rem;
   padding-top: 0.4rem;
